k8s/product-v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: spring-boot-v2
  namespace: product-v2

spec:
  replicas: 1

  selector:
    matchLabels:
      app: spring-boot-v2

  template:
    metadata:
      labels:
        app: spring-boot-v2

    spec:
      containers:
        - name: spring-boot-v2
          image: kaif3108/spring-boot-crud:v2.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 9191

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 9191
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 9191
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
