k8s/product-v2/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: spring-boot-v2-service
  namespace: product-v2

spec:
  selector:
    app: spring-boot-v2

  ports:
    - protocol: TCP
      port: 9191
      targetPort: 9191

  type: ClusterIP
