k8s/product-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-boot-v2-ingress
  namespace: product-v2

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: spring-boot-v2-service
                port:
                  number: 9191
